updated package keywords and added docker note to readme

--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
   "keywords": [
     "kubernetes",
     "k8s",
-    "gcloud"
+    "gcloud",
+    "docker",
+    "bq",
+    "big query",
+    "gsutil",
+    "gcs",
+    "google cloud"
   ],
   "bugs": {
     "url": "https://github.com/ericuldall/kubernodes/issues"
